FIX: renamed menu-sections to make code more readable

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -418,23 +418,23 @@ body {
     border: 0.11em solid #292424;
 }
 
-#menu-item-local {
+#menuItemLocal {
     background: linear-gradient(to bottom, rgba(221, 88, 10, 0.7) 0%, rgba(226, 121, 60, 0.7) 100%);
 }
 
-#menu-item-online {
+#menuItemOnline {
     background: linear-gradient(to bottom, rgba(7, 112, 24, 0.7) 0%, rgba(15, 156, 39, 0.7) 100%);
 }
 
-#menu-item-tournament {
+#menuItemTournament {
     background: linear-gradient(to bottom, rgba(71, 64, 168, 0.7) 0%, rgba(133, 129, 199, 0.7) 100%);
 }
 
-#menu-item-multiplayer {
+#menuItemMultiplayer {
     background: linear-gradient(to bottom, rgba(219, 22, 32, 0.7) 0%, rgba(241, 48, 58, 0.7) 100%);
 }
 
-#menu-item-dashboard {
+#menuItemDashboard {
     background: linear-gradient(to bottom, rgba(206, 31, 162, 0.7) 0%, rgba(221, 62, 181, 0.7) 100%);
 }
 
